# vcpkg-getting-started

./: .gitignore  CMakeLists.txt  helloworld.cpp  vcpkg-configuration.json  vcpkg.json
src/: helloworld.cpp
